EXA: Punt on fallback case not handled correctly in exaFillRegionTiled.

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=12520 .

(From master commit c7d6d1f5, modified to suit.)